Fix sign in and register link alignment again.

--- a/app/assets/stylesheets/modules/_navigation.scss
+++ b/app/assets/stylesheets/modules/_navigation.scss
@@ -6,7 +6,12 @@ nav {
   align-items: center;
   box-sizing: border-box;
 
-  > a:not(.profile) {
+  > span {
+    display: flex;
+  }
+
+  > a:not(.profile),
+  > span a {
     text-decoration: none;
     color: $dark-grey;
     font-size: $nav-item-size;
